# nfl-analysis-engine

./: .coverage.Jons-MacBook-Pro.local.67970.XMiNEmix  .env.nfl  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.data  Dockerfile.k8s  Makefile  NFL_DATA_IMPLEMENTATION_GUIDE.md  NFL_DATA_SUCCESS_REPORT.md  POSITION_DATA_FIX_REPORT.md  README.md  catalog-info.yaml  docker-compose.nfl-data.yml  docker-compose.yml  docker-run.sh  extract_nfl_data.py  fix_teams.py  load_2024_nfl_data.py  migrate_nfl_data.py  migrate_players.py  migrate_players_simple.py  migrate_simple.py  mkdocs.yml  populate_teams.py  position_fix.sql  pyproject.toml  pytest.ini  requirements.txt  run_server.sh  run_with_nfl_data.sh  setup_nfl_database.py  setup_py311_environment.py  simple_2024_loader.py  simple_server.py  test_data_acquisition.py  test_data_integration.py  test_data_sources.py  (+5 more)
.claude/agents/: nfl-data-storyteller.md  qa-testing-specialist.md  sports-analytics-ui-designer.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
docs/: README.md  index.md  real-time-data-analysis.md  requirements.txt  research-findings.md  setup-mkdocs.sh
docs/architecture/: database.md  ml-models.md  overview.md  service-layer.md  system-overview.md
docs/database/: schema-design.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
k8s/: HOME-CLUSTER-DEPLOYMENT.md  README.md  app-deployment.yaml  cleanup.sh  configmap.yaml  deploy-home.sh  deploy.sh  manage.sh  namespace.yaml  postgresql.yaml  secrets.yaml  setup-docker-registry.sh
migrations/: env.py
migrations/versions/: 5be5a9523f92_initial_migration.py
models/: nfl_predictor.pkl  nfl_predictor_metadata.json
src/: apply_position_fix.py  download_nfl_data.py  fix_position_data.py  fix_score_differential.py  load_2025_schedule.py  load_nfl_to_postgres.py  load_play_data_with_players.py  load_simulated_nfl_data.py
src/analysis/: __init__.py  features.py  insights.py  ml_optimizer.py  models.py  player_stats.py  position_analytics.py  team_analytics.py  vegas.py
src/api/: __init__.py  auth.py  dependencies.py  insights.py  main.py  middleware.py
src/api/routers/: __init__.py  data.py  games.py  players.py  plays.py  predictions.py  teams.py  vegas.py
src/data/: __init__.py  cleaners.py  data_loader.py  data_mapper.py  nfl_data_client.py  nflfastr_client.py  pipeline.py  validators.py
src/database/: __init__.py  config.py  manager.py  migrations.py
src/models/: __init__.py  base.py  game.py  play.py  player.py  schemas.py  team.py
src/services/: __init__.py  base.py  dependencies.py  game_service.py  play_service.py  player_service.py  prediction_service.py  scheduler.py  team_service.py
src/web/: __init__.py  routes.py
src/web/templates/: base.html  error.html  game_detail.html  game_insights.html  games.html  home.html  insights.html  league_leaders.html  model_status.html  player_detail.html  players.html  players_new.html  predict_form.html  predict_result.html  predictions.html  schedule.html  team_analytics.html  team_comparison_form.html  team_detail.html  team_insights.html  teams.html  value_bets.html  (+1 more)
tests/: test_example.py
tests/test_analysis/: __init__.py  conftest.py  test_features.py  test_insights.py  test_models.py  test_vegas.py
tests/test_api/: __init__.py  conftest.py  test_basic.py  test_data.py  test_games.py  test_insights.py  test_main.py  test_players.py  test_plays.py  test_teams.py  test_teams_simple.py  test_vegas.py
tests/test_data/: test_cleaners.py  test_data_loader.py  test_data_mapper.py  test_nfl_data_client.py  test_pipeline.py  test_validators.py
tests/test_database/: __init__.py  test_config.py  test_manager.py  test_migrations.py
tests/test_models/: test_base.py  test_game.py  test_play.py  test_player.py  test_team.py
tests/test_services/: conftest.py  test_base_service.py  test_team_service.py
tests/test_web/: __init__.py  conftest.py  test_routes.py
